fix(runtime): target Java 17 and load deployment configuration